--- a/app/css/career.css
+++ b/app/css/career.css
@@ -26,7 +26,7 @@
 }
 .container .careers {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   text-align: center;
   align-items: center;
   margin: 0px 40px;
@@ -36,10 +36,10 @@
   grid-template-columns: 1fr 1fr;
   align-items: center;
   justify-content: center;
-  margin: 0px 10px;
+  margin: 10px;
 }
 .container .careers .career-box .career-img{
-  width: 90%;
+  width: 80%;
   border: 1px solid #222;
   border-radius: 10px;
 }
