update gallery cuisine

--- a/app/css/gallery.css
+++ b/app/css/gallery.css
@@ -26,7 +26,7 @@
 }
 .container .album-food {
   padding: 150px;
-  background-image: url(../../img/menu-c.jpg);
+  background-image: url(../../img/italian-cuisine/pasta3.jpg);
   background-color: rgba(255,255,255,0.6);
   background-blend-mode: lighten;
   border-radius: 10px;
