--- a/app/css/terms.css
+++ b/app/css/terms.css
@@ -13,14 +13,19 @@
   border-bottom-color: #222;
 }
 
-h1 {
-  margin: 1px;
+h1, h3, p {
+  margin: 5px;
 }
 
 .container {
-  padding: 10px;
+  padding: 0px 20px;
+  text-align: justify;
 }
 .terms-intro,
 .terms-outro {
   padding: 0px 10px;
+  margin-bottom: 20px;
+}
+.terms {
+  margin-bottom: 30px;
 }
